--- a/login_dialog_window.ui
+++ b/login_dialog_window.ui
@@ -35,6 +35,9 @@
      </property>
      <item row="6" column="0" colspan="2" alignment="Qt::AlignHCenter">
       <widget class="QCheckBox" name="remember_user_check_box">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>Lembrar usuário</string>
        </property>
@@ -55,6 +58,9 @@
      </item>
      <item row="5" column="1" alignment="Qt::AlignHCenter">
       <widget class="QLineEdit" name="password_line_edit">
+       <property name="focusPolicy">
+        <enum>Qt::TabFocus</enum>
+       </property>
        <property name="echoMode">
         <enum>QLineEdit::Normal</enum>
        </property>
@@ -68,7 +74,11 @@
       </widget>
      </item>
      <item row="4" column="1" alignment="Qt::AlignHCenter">
-      <widget class="QLineEdit" name="user_line_edit"/>
+      <widget class="QLineEdit" name="user_line_edit">
+       <property name="focusPolicy">
+        <enum>Qt::TabFocus</enum>
+       </property>
+      </widget>
      </item>
      <item row="4" column="0" alignment="Qt::AlignHCenter">
       <widget class="QLabel" name="user_label">
@@ -160,6 +170,11 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>user_line_edit</tabstop>
+  <tabstop>password_line_edit</tabstop>
+  <tabstop>acess_push_button</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
